syntax = "proto3";

package template;

option go_package = "build/shopping_admin";
import "protos/global/global.proto";

message BusinessCircle {
  // 删除状态
  bool delStatus = 1;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 2;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 3;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 4;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 5;  // @gotags: gorm:"->" swaggerignore:"true"
}

message BusinessCircleParam { }

message BusinessCircleIds {
  repeated string id = 1;
  string userId = 2;
}

// 分页查询加权参数
message BusinessCirclePageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询参数
  BusinessCircleParam params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 返回结果
message BusinessCircleResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  BusinessCircle detail = 3;  // 详情
  repeated BusinessCircle list = 4;  // 列表
}

// 业务实现
service BusinessCircleService {
  // 新增
  rpc Create(BusinessCircle) returns (BusinessCircleResponse);

  // 修改
  rpc Update(BusinessCircle) returns (BusinessCircleResponse);

  // 删除
  rpc Delete(BusinessCircleIds) returns (BusinessCircleResponse);

  // 查询 详情
  rpc FindById(BusinessCircleIds) returns (BusinessCircleResponse);

  // 查询 分页
  rpc FindPageList(BusinessCirclePageAuthQuery) returns (BusinessCircleResponse);
}

//  //BusinessCircle 商圈
// type BusinessCircle struct {
// 	cmodel.BaseModel
// 	// 商圈id
// 	CircleId string `gorm:"primary_key;<-:create" json:"circleId"`
// 	// 商圈名称
// 	CircleName string `json:"circleName"`
// 	// 是否展示(0:不展示 1:展示 )
// 	IsDisplay int `json:"isDisplay"`
// 	// 平台应用id
// 	PlatformAppId string `json:"platformAppId"`
// 	// 默认商圈；1，默认商圈、0，正常商圈
// 	IsDefault int `json:"isDefault"`
// 	// 排序
// 	SortBy int64 `json:"sortBy"`
// }

// func (BusinessCircle) TableName() string {
// 	return enum.BusinessCircle.TableName
// }

// // BusinessCircleParam 分页搜索参数
// type BusinessCircleParam struct {
// 	// 商圈名称
// 	CircleName string `json:"circleName"`
// }

// // BusinessCircleListVo 商圈列表
// type BusinessCircleListVo struct {
// 	// 商圈id
// 	CircleId string `json:"circleId"`
// 	// 商圈名称
// 	CircleName string `json:"circleName"`
// 	// 是否展示(0:不展示 1:展示 )
// 	IsDisplay int `json:"isDisplay"`
// 	// 平台应用id
// 	PlatformAppId string `json:"platformAppId"`
// 	// 默认商圈；1，默认商圈、0，正常商圈
// 	IsDefault int `json:"isDefault"`
// 	// 排序
// 	SortBy int64 `json:"sortBy"`
// 	// 创建时间
// 	CreateTime cmodel.LocalDate `json:"createTime"`
// }

// type BusinessCircleDetailVo struct {
// 	// 商圈id
// 	CircleId string `json:"circleId"`
// 	// 商圈名称
// 	CircleName string `json:"circleName"`
// 	// 是否展示(0:不展示 1:展示 )
// 	IsDisplay int `json:"isDisplay"`
// 	// 平台应用id
// 	PlatformAppId string `json:"platformAppId"`
// 	// 默认商圈；1，默认商圈、0，正常商圈
// 	IsDefault int `json:"isDefault"`
// 	// 排序
// 	SortBy int64 `json:"sortBy"`
// }
