syntax = "proto3";

package shopping_admin;

option go_package = "build/shopping_admin";
import "protos/global/global.proto";

message ProductDetail {
  // 商品id
  string productId = 1;  // @gotags: gorm:"primary_key;<-:create;column:product_id"
  // 商品详情
  string content = 2;  // @gotags: gorm:"<-;column:content"
}

message ProductDetailParam {
}

message ProductDetailIds {
  repeated string id = 1;
  string userId = 2;
}

// 分页查询加权参数
message ProductDetailPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询参数
  ProductDetailParam params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 返回结果
message ProductDetailResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  ProductDetail detail = 3;  // 详情
  repeated ProductDetail list = 4;  // 列表
}

// 业务实现
service ProductDetailService {
  // 新增
  rpc Create(ProductDetail) returns (ProductDetailResponse);

  // 修改
  rpc Update(ProductDetail) returns (ProductDetailResponse);

  // 删除
  rpc Delete(ProductDetailIds) returns (ProductDetailResponse);

  // 查询 详情
  rpc FindById(ProductDetailIds) returns (ProductDetailResponse);

  // 查询 分页
  rpc FindPageList(ProductDetailPageAuthQuery) returns (ProductDetailResponse);
}
